# evutils

./: .buildinfo  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  TODO.md  __init__.py  formats.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  setup.py  switcher.json
.github/workflows/: coverage.yaml  dev-docs.yaml  platform_test.yaml  release.yaml  test.yaml
_images/: inheritance-0fa3689fea808cc44f576ffcbadbb7681e3af3d4.png.map  inheritance-66198fd3441a35faf8a0fc2b6954c9a9744e3833.png.map  inheritance-6b9f4b381578abd8fa24227f7eab2517d3378510.png.map  inheritance-7a0cbe3e3505ccd1a370dcb12a3d0f1e70ddd7ec.png.map  inheritance-85c5ec6138e0de604e3a1a7cf7eaf2cadc64fa06.png.map  inheritance-88af08affe9157d8b0c0c5945baa98adb9a60d93.png.map  inheritance-92a170ef57a0a3eccd73e42d6215f8ed31883f69.png.map  inheritance-c66243ec06643c8d6fa38bdc8fa911a4e08ac2a8.png.map  inheritance-c816cebf2f9922eaa8bb1cec3fdf1709d2c444d8.png.map  inheritance-cb094a5a17d822afb914f9a9d11accc211127d49.png.map  inheritance-e1531b5d910620431dc690955f455b64804ec460.png.map  inheritance-e2692f3d1195e506a5d70ed2787393c765ea69ce.png.map  inheritance-ebaa0a13dafd3dfb82a1e27f3367b6adf6a73abf.png.map  inheritance-f5b329b33c24e5f13e14b44a0c823c2e449e831d.png.map
_modules/: index.html
_modules/evutils/: chunking.html  jit.html  random.html  types.html
autoapi/: index.html
autoapi/evutils/: index.html
benchmarks/: README.html  README.md  conftest.py  decode_micro.py  readers.py  test_compare.py  test_container_formats.py  test_fixed_formats.py  test_formats.py  test_io.py  test_read.py  test_write.py  throughput.py
benchmarks/docker/: Dockerfile.openeb
benchmarks/legacy/: README.md  conftest.py  generate_benchmark_table.py  test_read.py  test_write.py
coverage/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_04b4572e158f3f4e___init___py.html  z_04b4572e158f3f4e__masking_py.html  z_04b4572e158f3f4e__utils_py.html  z_07426116e7c88b4a___init___py.html  z_0c0e89c7cdf19104___init___py.html  z_0c0e89c7cdf19104__common_py.html  z_0c0e89c7cdf19104__drop_py.html  z_0c0e89c7cdf19104__refractory_py.html  z_0c0e89c7cdf19104__spatial_py.html  z_0c0e89c7cdf19104__time_py.html  z_2ca55ad8a670aa53___init___py.html  z_2ca55ad8a670aa53__checker_py.html  z_2ca55ad8a670aa53__jit_py.html  z_2ca55ad8a670aa53_chunking_py.html  z_2ca55ad8a670aa53_jit_py.html  z_2ca55ad8a670aa53_random_py.html  z_2ca55ad8a670aa53_types_py.html  z_3aad7a81646fb1ac___init___py.html  z_3aad7a81646fb1ac__frame_py.html  z_3aad7a81646fb1ac__histogram_py.html  z_3aad7a81646fb1ac__timesurface_py.html  z_3aad7a81646fb1ac__tore_py.html  z_3aad7a81646fb1ac__voxel_py.html  z_577ac6403e605d07___init___py.html  z_577ac6403e605d07__masking_py.html  z_577ac6403e605d07__timestamp_py.html  z_8114fdd0c9021b1d___init___py.html  z_8114fdd0c9021b1d_compose_py.html  z_8114fdd0c9021b1d_transforms_py.html  z_844f84a11b3283d3___init___py.html  z_844f84a11b3283d3_open3d_py.html  z_844f84a11b3283d3_plot3d_py.html  z_a276fa636812fcaf_conftest_py.html  z_a276fa636812fcaf_test_aedat_py.html  z_a276fa636812fcaf_test_aer_py.html  z_a276fa636812fcaf_test_bin_py.html  (+75 more)
coverage/htmlcov-c/: index.aer.c.499818f329b41820ec66014a8f27843d.html  index.csv.c.da0f83af8ca306fb4b1aeadf54ff000b.html  index.dat.c.377c682448e425d96aedb762e00ff090.html  index.evt2.c.9ba703a460994fd8b9813bd43eea94b1.html  index.evt21.c.d58aa0836761f3c6ba7f1f48bbcca8a2.html  index.evt3.c.66c7566822ed6f31e2204a92c3b4569a.html  index.evt4.c.4201bb70be13b004588ae469ad1499e2.html  index.evutils.c.975778f58e9da962fccb57764564675b.html  index.functions.html  index.html
csrc/: aer.c  csv.c  dat.c  evt2.c  evt21.c  evt3.c  evt4.c  evutils.c
dev/: .buildinfo  .buildinfo.bak  formats.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/_images/: inheritance-0479ca796fe67a800d42053483222738630fd3ea.png.map  inheritance-06421deda18cc4df3cf11136fe44ab6f4ece638d.png.map  inheritance-3db8ce4bdc457614b8fce8fde85a4660a10f1957.png.map  inheritance-45719018d6759808d57875a13b2e112d27907f95.png.map  inheritance-47ac9ed962695cbed040f099139494517947ccf8.png.map  inheritance-4d07396d48f468b665c651b485310e5b9030e8ca.png.map  inheritance-5353a88ac723cec8276e0ec263006659c8ce59f6.png.map  (+17 more)
dev/_modules/: index.html
dev/autoapi/: index.html
docker/: Dockerfile
docs/: deploy_coverage.sh  deploy_versioned_docs.sh  gen_switcher.py
examples/: 01_read_write_convert.py  02_chunked_processing.py  03_frame_accumulation.py  04_realtime_playback.py  play.py
io/: _npz.py  _raw.py  _reader.py  _txt.py  _writer.py  reader.py  writer.py
scripts/: bump_version.py  coverage.sh  coverage_index.html  generate_benchmark_table.py  generate_metadata.py
tests/: aedat_synth.py  conftest.py  conftest_utils.py  test_augment.py  test_checker.py  test_chunking.py  test_dense.py  test_filtering.py  test_io.py  test_processing.py  test_random.py  test_repr.py  test_robustness_edge_cases.py  test_sensor_size_metadata.py  test_transforms.py  test_types.py  test_version.py  test_vis.py
types/: __init__.py
v0.3.11/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.3.12/: .buildinfo  formats.html  genindex.html  index.html  py-modindex.html  search.html
v0.3.13/: .buildinfo  formats.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.3.14/: .buildinfo.bak  formats.html  genindex.html  index.html  py-modindex.html
v0.3.15/: .buildinfo  formats.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.3.16/: .buildinfo  formats.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
v0.3.17/: .buildinfo  formats.html  genindex.html  index.html  py-modindex.html  search.html
v0.3.18/: .buildinfo  formats.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
vis/: histogram.py  reconstructor.py
(+812 files in other folders)
