[build-system]
# scikit-build-core injects cmake/ninja itself when the system lacks them.
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "evutils"
version = "0.3.0"
description = "Utilities for event-based vision"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Jakub Mandula", email = "jakub.mandula@pbl.ee.ethz.ch" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "tqdm>=4.41",
    "matplotlib>=3.1",
    "opencv-python>=4.2",
    "numba>=0.51",
    "h5py==3.16.0",
    "hdf5plugin==6.0.0",
    "scipy>=1.15.3",
    "pandas>=2.3.3",
]
keywords = ["events", "dvs", "neuromorphic", "vision", "event-based"]

[project.optional-dependencies]
torch = ["torch>=2.0"]
numba = ["numba>=0.57"]



# --- scikit-build-core (drives CMake) --------------------------------------
[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
# src/ layout: the importable package is src/evutils
wheel.packages = ["src/evutils"]
# Don't ship the C sources / CMake files in the wheel; they're build inputs.
sdist.include = ["csrc", "CMakeLists.txt", "src", "pyproject.toml", "README.md"]
cmake.version = ">=3.18"

[tool.scikit-build.editable]
# During development (`uv pip install -e .`), rebuild the C automatically on
# import so editing a .c file and re-running picks up the change.
mode = "redirect"
rebuild = true
verbose = false



[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
