[build-system]
# scikit-build-core injects cmake/ninja itself when the system lacks them.
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "evutils"
version = "0.3.18"
description = "Utilities for event-based vision"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Jakub Mandula", email = "jakub.mandula@pbl.ee.ethz.ch" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    # Languages
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    # Topics
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    # MISC
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0.0",
    "numba>=0.57",
]
keywords = ["events", "dvs", "neuromorphic", "vision", "event-based"]

[project.optional-dependencies]
# Feature toggles
# Decompression for AEDAT 4.0 packet bodies (uncompressed files work without).
aedat = [
    "lz4>=4.0",
    "zstandard>=0.22; python_version < '3.14'",
]

torch = ["torch>=2.0"]
hdf5 = ["hdf5plugin==6.0.0", "h5py>=3.16.0"]
vis = [
    "matplotlib>=3.1",
    "opencv-python>=4.2",
    "open3d>=0.19.0; python_version < '3.13' and platform_machine != 'aarch64' and platform_machine != 'arm64'",
    "scipy>=1.15.3",
    "tqdm>=4.41",
] # Renamed for simplicity

# Ecosystem
test = [
    "evutils[aedat,torch,hdf5,vis]",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "pytest-benchmark>=5.2.3",
    # Extracting the .tar.zst test recordings without relying on system tar
    # having zstd support (Python 3.14+ reads zstd via the stdlib).
    "zstandard>=0.22; python_version < '3.14'",
]
# Coverage tooling -- kept out of `test` so ordinary test runs stay lean; pulled
# in only by the Coverage workflow and scripts/coverage.sh. Requires `test` too.
#   pytest-cov  Python line coverage (--cov)
#   gcovr       C coverage from the gcov-instrumented build
#   genbadge    self-contained badge SVG (no third-party render) for the README
coverage = [
    "evutils[test]",
    "pytest-cov>=7.1.0",
    "gcovr>=8.2",
    "genbadge[coverage]>=1.1",
]
# Optional third-party readers used only by the comparison benchmarks. OpenEB's
# `metavision_*` packages are not on PyPI (install from Prophesee, e.g. via the
# Docker image in benchmarks/docker); the comparison benchmarks skip
# automatically when a library is missing.
compare = [
    "expelliarmus>=1.1.0",
    "evlib>=0.12.0; python_version >= '3.11'",
    "evlib>=0.8.0; python_version < '3.11'",
    "evt3>=0.3",
    "faery>=0.7.0",
    # NOT included: event-vision-library (shiba24) -- it installs as `evlib`
    # too, colliding with the Rust evlib above. Install it in a separate venv
    # to run its comparison benchmark (see benchmarks/README.md).
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-autoapi>=3.6.1",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx_book_theme>=1.0.0",
    "pydata_sphinx_theme>=0.19.0",
    "myst-parser>=4.0.0",
]

# Meta-groups
all = ["evutils[aedat,torch,hdf5,vis]"]
dev = ["evutils[all,test,docs]"]


[tool.uv]
# Rebuild the wheel when the C sources change, not just pyproject.toml
# (uv's default cache keys ignore csrc/, leaving a stale native library).
cache-keys = [
    { file = "pyproject.toml" },
    { file = "CMakeLists.txt" },
    { file = "csrc/**/*.c" },
    { file = "csrc/**/*.h" },
]

[tool.mypy]
files = ["src/evutils"]
# The rpg_e2vid git submodule is vendored third-party code (contains Python 2).
exclude = ["rpg_e2vid"]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# Untyped third-party libraries (no stubs published).
module = [
    "numba", "numba.*",

    "h5py", "h5py.*",
    "hdf5plugin",
    "cv2", "cv2.*",
    "open3d", "open3d.*",
    "scipy", "scipy.*",
    "mpl_toolkits.*",
    "tqdm",
    "lz4", "lz4.*",
    "zstandard",
    "compression.*",  # stdlib only from Python 3.14 (zstd)
]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Bare `pytest` runs only the correctness suite. Benchmarks are heavy and run
# explicitly with `python benchmarks/throughput.py` (see benchmarks/README.md).
testpaths = [
    "tests",
    "src/evutils",
]


[project.urls]
"Source Code" = "https://github.com/mandulaj/evutils"
"Documentation" = "https://mandulaj.github.io/evutils/"
"Bug Tracker" = "https://github.com/mandulaj/evutils/issues"
"Homepage" = "https://mandulaj.github.io/evutils/"



# --- scikit-build-core (drives CMake) --------------------------------------
[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
# src/ layout: the importable package is src/evutils
wheel.packages = ["src/evutils"]
# Don't ship the C sources / CMake files in the wheel; they're build inputs.
sdist.include = ["csrc", "CMakeLists.txt", "src", "pyproject.toml", "README.md"]
cmake.version = ">=3.18"

[tool.scikit-build.editable]
# During development (`uv pip install -e .`), rebuild the C automatically on
# import so editing a .c file and re-running picks up the change.
mode = "redirect"
rebuild = true
verbose = false

